[gd_scene load_steps=21 format=3 uid="uid://q7y8tjusqe0x"]

[ext_resource type="Texture2D" uid="uid://cttlq1y6d8eiw" path="res://Assets/Art/coalSpiritFLOAT-Sheet.png" id="1_h465o"]
[ext_resource type="Script" path="res://Scenes/enemy.gd" id="1_m6d3d"]
[ext_resource type="Shader" path="res://Scenes/Player.gdshader" id="2_1dl4b"]
[ext_resource type="Texture2D" uid="uid://ctrc4p3dbor1t" path="res://Assets/Art/coalSpiritDEAD.png" id="2_4ca10"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yk8qn"]
shader = ExtResource("2_1dl4b")
shader_parameter/damaged = null
shader_parameter/damage_color = Vector4(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq1ob"]
atlas = ExtResource("2_4ca10")
region = Rect2(0, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6og8n"]
atlas = ExtResource("2_4ca10")
region = Rect2(40, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_hluyy"]
atlas = ExtResource("2_4ca10")
region = Rect2(80, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchp3"]
atlas = ExtResource("2_4ca10")
region = Rect2(120, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wkn1"]
atlas = ExtResource("2_4ca10")
region = Rect2(160, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnx2d"]
atlas = ExtResource("1_h465o")
region = Rect2(0, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj7pg"]
atlas = ExtResource("1_h465o")
region = Rect2(40, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtnqn"]
atlas = ExtResource("1_h465o")
region = Rect2(80, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw6pu"]
atlas = ExtResource("1_h465o")
region = Rect2(120, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyx26"]
atlas = ExtResource("1_h465o")
region = Rect2(160, 0, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yo2i"]
atlas = ExtResource("1_h465o")
region = Rect2(200, 0, 40, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmj10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq1ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6og8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hluyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wkn1")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnx2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj7pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtnqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw6pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyx26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yo2i")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t2jiv"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_e7qhh"]
radius = 125.399

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vyhv"]
size = Vector2(145, 62)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_m6d3d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_yk8qn")
sprite_frames = SubResource("SpriteFrames_vmj10")
animation = &"Death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_t2jiv")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_e7qhh")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_1vyhv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
